[project]
name = "flask-merchants"
version = "2025.3.1"
description = "Multipurpose payment platform for Flask-Admin"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic",
    "flask",
    "flask-admin[sqlalchemy-with-utils,translation]",
    "flask-migrate",
    "flask-security[babel,common,sqla]",
    "python-dotenv",
    "python-multipart",
    "python-slugify",
    "sqlalchemy",
    "sqlalchemy-utils",
    "typing-extensions",

]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "hypothesis",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "rich",
    "flask-debugtoolbar",
]
deploy = ["gunicorn"]

[tool.poetry]
packages = [
    { include = "flask_merchants" },
    { include = "merchants" },
    { include = "store" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["flask_merchants", "merchants", "store"]
omit = ["tests/*", "*/__init__.py", "*/migrations/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
fail_under = 0

[tool.pytest.ini_options]
addopts = "-v --cov=flask_merchants --cov=merchants --cov=store --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test*.py"]

[tool.black]
line-length = 119
target-version = ['py314']

[tool.ruff]
line-length = 119
target-version = "py314"
