[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-merchants"
version = "2026.3.1"
description = "Flask/Quart extension for  Merchants payment SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "merchants-sdk (>=2026.3.1,<2027.0.0)",
]

[project.optional-dependencies]
admin = [
    "flask-admin[images,sqlalchemy-with-utils,translation]>=2.0.2",
    "flask-security[babel,common,fsqla] (>=5.7.1,<6.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
]
quart = ["quart>=0.19"]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-asyncio>=0.21",
    "pre-commit",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "flask_merchants/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long – handled by ruff format
    "B008", # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["flask_merchants"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
